<resources>
    <string name="app_name">Game Book</string>
    <string name="ContentDescriptionLogo">Logo</string>
    <string name="string_Email">Email</string>
    <string name="string_Contraseña">Contraseña</string>
    <string name="string_IniciarSesion">Iniciar sesion</string>
    <string name="string_AunNoTienesUnaCuenta">¿Aun no tienes una cuenta?</string>
    <string name="string_Registrarme">Registrarme</string>
    <string name="string_RegistroDeUsuario">Registro de usuario</string>
    <string name="string_NombreDeUsuario">Nombre de usuario</string>
    <string name="string_ValidarContraseña">Validar Contraseña</string>
    <string name="string_Nombres">Nombres</string>
    <string name="string_Apellidos">Apellidos</string>
    <string name="string_TipoDeDocumento">Tipo de documento:</string>
    <string name="string_CC">C.C.</string>
    <string name="string_TI">T.I.</string>
    <string name="string_CE">C.E.</string>
    <string name="string_NumeroDeDocumento">Número de documento</string>
    <string name="string_Sexo">Sexo:</string>
    <string name="string_Masculino">Masculino</string>
    <string name="string_Femenino">Femenino</string>
    <string name="string_Celular">Celular</string>
    <string name="string_Atras">Atrás</string>
    <string name="string_Inicio">Inicio</string>
    <string name="txtDescripcion">El juego consiste en conducir a Pac-Man, una bola amarilla que abre y cierra la boca, por un laberinto. Suma puntos cuando come aquello que encuentra a su paso, bolitas y diferentes frutas, pero debe esquivar a cuatro fantasmas</string>
    <string name="btnCalificar">Calificar</string>
    <string name="btnComentar">Comentar</string>
    <string name="btnComprar">Comprar</string>
    <string name="txtvTitulo">PAC-MAN</string>
    <string name="string_Desarrollador">Desarrollador:</string>
    <string name="string_Desarrollador_ej">Nammco</string>
    <string name="string_Calificacion">Calificación:</string>
    <string name="string_Calificacion_ej">4.5</string>
    <string name="string_img_JuegoPortada">Portada del juego</string>
    <string name="string_img_JuegoPerfil">Perfil del juego</string>
    <string name="string_img_Star">Star</string>
    <string name="string_img_Heart">Heart</string>
    <string name="string_Favoritos">Favoritos</string>
    <string name="string_Comentarioej">La mecánica del juego original creado por Toru Iwatani es muy sencilla, hay un laberinto lleno de puntos que un personaje amarillo y redondo debe comer, evitando ser tocado por varios enemigos o «fantasmas» que recorren el escenario; una vez el personaje ha comido todos los puntos, pasa al siguiente nivel. En Pac-Man 256 se mantiene la esencia del original, el jugador controla al personaje amarillo que debe comer puntos por un escenario, pero en vez de tener niveles, este es un endless runner, cabe aclarar que el juego fue creado para móviles y esta es una mecánica recurrente en esa plataforma.Entonces, te encuentras en un laberinto interminable lleno de fantasmas y bolas de poder, como en el original, al comer esas bolas, Pac-Man puede comerse a los fantasmas, pero este juego tiene varias maneras de acabar con ellos: puedes recolectar diferentes poderes como una pistola láser, un tornado, y hasta clones de Pac-Man. También puedes mejorar los poderes por medio de unas monedas que encuentras en el laberinto o que te entregan en una caja sorpresa, que obtienes cada cierto tiempo.</string>
    <string name="string_Sinopsis">Sinópsis</string>
    <string name="string_Comentarios">Comentarios</string>

    <string name="string_Nombre">Nombre:</string>
    <string name="string_Correo">Correo:</string>
    <string name="string_Cedula">Cedula:</string>
    <string name="number_Celular">Celular:</string>
    <string name="btn_Regresar">Regresar</string>
    <string name="string_perfil">MI PERFIL</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="string_LosMasJugados">Los más jugados</string>
    <string name="string_Recomendados">Recomendados</string>

    <string name="string_Asphalt">Asphalt</string>
    <string name="string_AsphaltDesarrollador">Gameloft</string>
    <string name="string_AngryBirds">Angry Birds</string>
    <string name="string_AngryBirdsDesarrollador">Rovio Entertainment</string>
    <string name="string_CrashBandicoot">Crash Bandicoot</string>
    <string name="string_CrashBandicootDesarrollador">Naughty Dog</string>
    <string name="string_CallOfDuty">Call Of Duty</string>
    <string name="string_CallOfDutyDesarrollador">Activision</string>
    <string name="string_Pacman">Pacman</string>
    <string name="string_PacmanDesarrollador">Namco</string>
    <string name="string_LosSimpsons">Los Simspons</string>
    <string name="string_LosSimpsonsDesarrollador">Radical Entertainment</string>
    <string name="string_Lol">League Of Legends</string>
    <string name="string_LolDesarrollador">Riot Games</string>
    <string name="string_Halo">Halo</string>
    <string name="string_HaloDesarrollador">Microsoft</string>
    <string name="string_Perfil">Perfil</string>
</resources>