<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#228A812F"
    tools:context=".VisualizarJv">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondopacman" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="124dp"
        android:layout_height="154dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/pacman" />

    <TextView
        android:id="@+id/txtvTitulo"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtvTitulo"
        android:textColor="#090909"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="324dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:background="#27423E3E"
        android:text="@string/txtDescripcion"
        android:textColor="#0B0909"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#D5FFC107"
        android:text="@string/btnCalificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btnComentar"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#C8673AB7"
        android:text="@string/btnComentar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="191dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#E80C0C"
        android:text="@string/btnComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txtvTitulo" />

</androidx.constraintlayout.widget.ConstraintLayout>